fix: adjust layout for better visibility of HTTP error message

--- a/src/assets/styles/_form.scss
+++ b/src/assets/styles/_form.scss
@@ -121,23 +121,30 @@ form {
 
 .error-wrapper {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 
-  height: 32px;
-  padding: 9px;
+  min-height: 32px;
+  padding: 0 9px;
 
   .error-message {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
 
     p {
-      height: 16px;
-
       font-size: 12px;
       font-weight: 400;
       color: var(--color-red);
+      line-height: 1.4;
+      margin: 2px 0;
+    }
+
+    .backend-error {
+      font-size: 16px;
+      font-weight: 600;
+      color: var(--color-red);
+      margin: 2px 0;
     }
   }
 }
